--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.477.0",
     "nuxt": "^3.15.4",
+    "reka-ui": "^2.0.2",
+    "shadcn-nuxt": "1.0.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.5.1",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "eslint": "^9.21.0"
   }
 }
