--- a/package.json
+++ b/package.json
@@ -10,14 +10,28 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/ui": "3.0.0-beta.2",
+    "@nuxt/icon": "1.10.3",
+    "@nuxt/image": "^1.9.0",
+    "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^12.8.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.477.0",
     "nuxt": "^3.15.4",
+    "reka-ui": "^2.0.2",
+    "shadcn-nuxt": "1.0.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.5.1",
-    "eslint": "^9.21.0"
+    "@antfu/eslint-config": "^4.6.0",
+    "@iconify-json/devicon": "^1.2.18",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "eslint": "^9.21.0",
+    "typescript": "^5.8.2"
   }
 }
